ios layout issues, fixes #11

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,16 @@
 .container {
   padding: 0;
+  /* ios sizing is hard https://dev-tips.com/css/overlapping-bottom-navigation-bar-despite-100vh-in-ios-safari */
+  height: 100%;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
+  height: stretch;
+  display: flex
 }
 
 .main {
-  min-height: 100vh;
   padding: var(--appMargin);
   flex: 1;
   display: flex;
-  flex-direction: column;
 }
